fix: Fix auto zoom on iphone when keyboard comes up

--- a/app/globals.css
+++ b/app/globals.css
@@ -217,3 +217,7 @@
     background-position: -200% 0;
   }
 }
+
+input, textarea, select {
+  font-size: 16px;
+}
